07-kubernetes-persistent-volumes/labs/mysql-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: hollow-database
  labels:
    app: hollow-database

spec:
  replicas: 1
  strategy:
    # The "Recreate" strategy is a dummy deployment which consists of
    # shutting down version A then
    # deploying version B after version A is turned off
    # This technique implies downtime of the service that
    # depends on both shutdown and boot duration of the application
    type: Recreate
    # Default is "RollingUpdate"

  selector:
    matchLabels:
      app: hollow-database

  template:
    metadata:
      labels:
        app: hollow-database

    spec:
      containers:
        - name: mysql
          image: eshanks16/hollowdb-mysql:v4
          imagePullPolicy: Always

          ports:
            - containerPort: 3306

          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql

      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-volume
