07-kubernetes-persistent-volumes/labs/hollow-service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: hollow-app
  labels:
    app: hollow-app

spec:
  selector:
    app: hollow-app

  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
