07-kubernetes-persistent-volumes/labs/mysql-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hollow-database
spec:
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
      protocol: TCP
  selector:
    app: hollow-database
