07-kubernetes-persistent-volumes/labs/hollow-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hollow-app
  labels:
    app: hollow-app
spec:
  rules:
    - host: frontend.minikube.local
      http:
        paths:
          - path: /
            backend:
              serviceName: hollow-app
              servicePort: 5000
